updata code