@@ -116,16 +116,17 @@ public class Admin_ProductController {
 			if (!file.isEmpty()) {
 				String fileName = StringUtils.cleanPath(file.getOriginalFilename());
 
-				// Đường dẫn đến thư mục images trong thư mục static
-				String imagePath = "classpath:static/images/";
-				Path uploadDir = Paths.get(ResourceUtils.getURL(imagePath).toURI());
+				// Đường dẫn đến thư mục images trong thư mục nguồn
+				// (src/main/resources/static/images)
+				String imagePath = "static/images/";
+				Path uploadDir = Paths.get(ResourceUtils.getFile(imagePath).getAbsolutePath());
 				Path filePath = uploadDir.resolve(fileName);
 
 				// Copy file vào thư mục images
 				Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
 
 				// Cập nhật tên file ảnh cho sản phẩm
-				s.setHinhAnh(fileName);
+				s.setHinhAnh("images/" + fileName);
 			}
 
 			Optional<NhaCungCap> optionalNhaCungCap = nhaCungCapDAO.findById(nhaCungCapId);
@@ -169,21 +170,21 @@ public class Admin_ProductController {
 		}
 
 		// Lưu hình vào thư mục
-		String imagePath = "classpath:static/images/";
-
 		try {
 			if (!file.isEmpty()) {
 				String fileName = StringUtils.cleanPath(file.getOriginalFilename());
 
-				// Đường dẫn đến thư mục images trong thư mục static
-				Path uploadDir = Path.of(ResourceUtils.getURL(imagePath).toURI());
+				// Đường dẫn đến thư mục images trong thư mục nguồn
+				// (src/main/resources/static/images)
+				String imagePath = "src/main/resources/static/images";
+				Path uploadDir = Paths.get(ResourceUtils.getFile(imagePath).getAbsolutePath());
 				Path filePath = uploadDir.resolve(fileName);
-
+				System.out.println(uploadDir);
 				// Copy file vào thư mục images
 				Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
 
 				// Cập nhật tên file ảnh cho sản phẩm
-				item.setHinhAnh(fileName);
+				item.setHinhAnh("images/" + fileName);
 			} else {
 				item.setHinhAnh(sanPham.getHinhAnh());
 			}
